a tags in correct place - scrollbar issue still present

--- a/css/index.css
+++ b/css/index.css
@@ -411,20 +411,22 @@ table {
   z-index: 2;
   flex-wrap: wrap;
   justify-content: center;
+  opacity: 0.9;
+  align-items: flex-start;
 }
 .expanded nav {
   width: 40%;
-  margin-top: -200px;
+  margin: 25px 0 0 -30px;
 }
 .expanded .top-nav {
   padding-left: 40%;
-  margin-top: -200px;
 }
 .expanded .top-nav .nav-button {
   display: none;
 }
 .expanded .top-nav .expanded-nav-button {
   display: block;
+  margin-top: 25px;
 }
 .expanded .toggle-nav {
   display: flex;
