--- a/less/navigation.less
+++ b/less/navigation.less
@@ -33,19 +33,19 @@
     z-index: 2;
     flex-wrap: wrap;
     justify-content: center;
-
+    opacity: .9;
+    align-items: flex-start;
     nav {
         width: 40%;
-        margin-top: -200px;
-    }
+        margin: 25px 0 0 -30px;    }
     .top-nav {
         padding-left: 40%;
-        margin-top: -200px;
         .nav-button {
             display: none;
         }
         .expanded-nav-button {
             display: block;
+            margin-top:25px;
         }
     }
     .toggle-nav {       
